feat:Complete V0.5 - HTTP Request parsing and Hello Tencent response

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,4 +14,6 @@ add_executable(server
         src/InetAddress.cpp
         src/Socket.cpp
         src/Epoll.cpp
+        src/Buffer.cpp
+        src/HttpRequest.cpp
 )
