feat: complete single-thread reactor with epoll ET and sendfile, 19k QPS achieved

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,4 +16,5 @@ add_executable(server
         src/Epoll.cpp
         src/Buffer.cpp
         src/HttpRequest.cpp
+        src/HttpConnection.cpp
 )
